Switch to uuids and simplify names
- bundles, settings and values now have uuids as identifier
- removed unnecessary name parts (SettingsBundle -> Bundle,
SettingsValue -> Value, ...)
